--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
-  <head>
+  <title>
     2059-901 Video Game Design 2019: The Seige of Six Springs
-</head>
+</title>
 	
 <body>
 	<p>2059-901 Video Game Design Submission 2019</p>
