--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 </title>
 	
 <body>
-	<p>2059-901 Video Game Design Submission 2019</p>
-	<p>The Seige of Six Springs</p>
+	<h1>2059-901 Video Game Design Submission 2019</h1>
+	<h2>(2059-010, 2059-015)</h2>
+	<p></p>
+	<h1>The Seige of Six Springs</h1>
 </body>
 </html>
