--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 	<h1>The Seige of Six Springs</h1>
 	<p></p>
 	<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/245685926/? autostart=false" frameborder="0" allowfullscreen></iframe>
+	<p>Test</p>
 </body>
 </html>
