--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<p></p>
 	<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/245685926/? autostart=false" frameborder="0" allowfullscreen></iframe>
 	<p></p>
-	[embed]https://github.com/superpi2/vgd2019/blob/gh-pages/final1.pdf[/embed]
+	<p>Link to game: https://scratch.mit.edu/projects/245685926/</p>
+	<p></p>
+	<p>Link to PDF: https://drive.google.com/file/d/1RhABLbtrI1mJn1ZEoWpm47-ZrPZ6-oFw/view?usp=sharing</p>
 </body>
 </html>
