--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h1>2059-901 Video Game Design Submission 2019</h1>
 	<h2>(2059-010, 2059-015)</h2>
 	<p></p>
-	<h1>The Seige of Six Springs</h1>
+	<h1>The Siege of Six Springs</h1>
 	<p></p>
 	<p>Link to game: https://scratch.mit.edu/projects/245685926/</p>
 	<p></p>
