--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<p></p>
 	<h1>The Siege of Six Springs</h1>
 	<p></p>
-	<p>Link to game: https://scratch.mit.edu/projects/245685926/</p>
+	<p>Link to game: <a>https://scratch.mit.edu/projects/281976025/</a></p>
 	<p></p>
-	<p>Link to PDF: https://drive.google.com/file/d/1RhABLbtrI1mJn1ZEoWpm47-ZrPZ6-oFw/view?usp=sharing</p>
+	<p>Link to PDF: <a>https://drive.google.com/file/d/1RhABLbtrI1mJn1ZEoWpm47-ZrPZ6-oFw/view?usp=sharing</a></p>
 </body>
 </html>
