--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
 </title>
 	
 <body>
-	<h1>2059-901 Video Game Design Submission 2019</h1>
-	<h2>(2059-010, 2059-015)</h2>
-	<p></p>
-	<h1>The Siege of Six Springs</h1>
-	<p></p>
+	<img src="websiteAAA.jpg" alt="2059-901 Video Game Design Submission 2019 (2059-010, 2059-015)">
 	<p>Link to game: <a href="https://scratch.mit.edu/projects/281976025/">https://scratch.mit.edu/projects/281976025/</a></p>
 	<p></p>
 	<p>Link to PDF: <a href="https://drive.google.com/file/d/1RhABLbtrI1mJn1ZEoWpm47-ZrPZ6-oFw/view?usp=sharing">https://drive.google.com/file/d/1RhABLbtrI1mJn1ZEoWpm47-ZrPZ6-oFw/view?usp=sharing</a></p>
