--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+	<head>
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
+	<head>
 	<title>
     		2059-901 Video Game Design 2019: The Seige of Six Springs
 	</title>
