--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 	</title>
 	
 	<body>
-		<img src="websiteAAA.png" alt="2059-901 Video Game Design Submission 2019 (2059-010, 2059-015)" width="100%" height=height>
+		<img src="websiteAAA2.png" alt="2059-901 Video Game Design Submission 2019 (2059-007, 2059-011)" width="100%" height=height>
 		<a href="https://scratch.mit.edu/projects/286524660/" target="_blank">
 			<img src="gameLink.png" alt="Link to game: https://scratch.mit.edu/projects/286524660/" width="100%" height=height>
 		</a>
-		<p></p>
-		<p>Link to PDF: <a href="https://drive.google.com/file/d/1RhABLbtrI1mJn1ZEoWpm47-ZrPZ6-oFw/view?usp=sharing" target="_blank">https://drive.google.com/file/d/1RhABLbtrI1mJn1ZEoWpm47-ZrPZ6-oFw/view?usp=sharing</a></p>
+		<a href="https://drive.google.com/file/d/1RhABLbtrI1mJn1ZEoWpm47-ZrPZ6-oFw/view?usp=sharing" target="_blank">
+			<img src="website2.png" alt="Link to documentation: https://drive.google.com/file/d/1RhABLbtrI1mJn1ZEoWpm47-ZrPZ6-oFw/view?usp=sharing" width="100%" height=height>
+		</a>
 	</body>
 </html>
