--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 	<head>
 	<title>
-    		2059-901 Video Game Design 2019: The Seige of Six Springs
+    		T1151 Video Game Design 2019: The Seige of Six Springs
 	</title>
 	
 	<body>
-		<img src="websiteAAA2.png" alt="2059-901 Video Game Design Submission 2019 (2059-007, 2059-011)" width="100%" height=height>
+		<img src="websiteN.png" alt="T1151 Video Game Design Submission 2019 (S4946, S4949)" width="100%" height=height>
 		<a href="https://scratch.mit.edu/projects/286524660/" target="_blank">
 			<img src="gameLink.png" alt="Link to game: https://scratch.mit.edu/projects/286524660/" width="100%" height=height>
 		</a>
